# cloudflare-proxy-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: devskim.yml
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Record.vue  RecordList.vue
migrations/2019-01-08-062709_create_users/: up.sql
migrations/2019-01-10-012108_create_sites/: down.sql  up.sql
migrations/2019-01-14-115004_add_priv_table/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
templates/: index.html.tera
