[package]
name = "cloudflare-proxy"
version = "0.1.1"
authors = ["Fan Jiang <i@fanjiang.me>"]
edition = "2018"
default-run = "cloudflare-proxy"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "0.4.6"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tera = "0.11.20"
cloudflare = { git = "git://git@github.com/ProfFan/cloudflare-rs.git", branch = "zone-dns-update" }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates", "json"]