[package]
name = "cloudflare-proxy"
version = "0.1.1"
authors = ["Fan Jiang <i@fanjiang.me>"]
edition = "2018"
resolver = "2"
default-run = "cloudflare-proxy"

[dependencies]
diesel = { version = "2", features = ["postgres"] }
dotenv = "0"
rocket = "0"
regex = "1"
tokio = "1.22.0"
serde = { version = "1", features = ["derive"] }
tera = "1"

cloudflare = "0.9.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates", "json"]
